--- a/sass/main.scss
+++ b/sass/main.scss
@@ -30,6 +30,7 @@ Created: 21/11/2017
 @import "theme/section-newsletter.scss";
 @import "theme/section-news.scss";
 @import "theme/section-news-article.scss";
+@import "theme/section-job-article.scss";
 @import "theme/section-videos.scss";
 @import "theme/footer.scss";
 @import "theme/casestudies-overview.scss";
