--- a/css/main.css
+++ b/css/main.css
@@ -2146,6 +2146,41 @@ a.anchor {
   vertical-align: middle;
   top: -5px; }
 
+.section-news-article {
+  font-size: 16px;
+  font-weight: 300; }
+  .section-news-article p {
+    text-align: justify; }
+  .section-news-article h3 {
+    padding-top: 10px;
+    padding-bottom: 20px; }
+  .section-news-article strong {
+    font-weight: 800; }
+  .section-news-article a {
+    font-weight: 600; }
+  .section-news-article ul {
+    list-style-type: disc;
+    padding-left: 20px;
+    padding-bottom: 20px; }
+  .section-news-article .date {
+    font-weight: 600;
+    margin-bottom: 20px; }
+  .section-news-article .social-media .social-media-list {
+    display: flex;
+    align-items: start; }
+    .section-news-article .social-media .social-media-list li {
+      text-align: center;
+      margin: 5px; }
+  .section-news-article img {
+    float: right;
+    margin: 10px; }
+
+.fb_iframe_widget {
+  display: inline-block;
+  position: relative;
+  vertical-align: middle;
+  top: -5px; }
+
 .section-videos h2 {
   margin-top: 20px;
   margin-bottom: 20px; }
