--- a/_layouts/job-article.html
+++ b/_layouts/job-article.html
@@ -27,7 +27,7 @@
           </div>
           <div class="col-md-12 mb-20">
             {{ page.content | markdownify }}
-            {% include about-sixsq.md %}
+            {% include about-sixsq.html %}
             {% include social-media-share.html %}
           </div>
         </div>
