--- a/_includes/about-sixsq.html
+++ b/_includes/about-sixsq.html
@@ -1,8 +1,8 @@
 <h3>About SixSq</h3>
 
 <p>At SixSq, we enable organisations to accelerate their business from the Edge to the Cloud. 
-We are a fast-growing Software as a Service company, offering an Edge-to-Cloud agile, secure and open software platform (Nuvla.io) for the most demanding organisations. SixSq has an open and a highly collaborative culture, internally and externally with our customers & partners. We manage the entire organisation as an agile operation. We sell as a team. We believe that achieving “customer success” is our value “secret sauce” and is key for our growth.</p>
+We are a fast-growing Software as a Service company, offering Nuvla.io, an agile, secure and open Edge-to-Cloud software platform for the most demanding organisations. SixSq has an open and a highly collaborative culture, internally and externally with our customers & partners. We manage the entire organisation as an agile operation. We sell as a team. We believe that achieving customer success is our value “secret sauce” and is key for our growth.</p>
 
-<p>Now part of the Ekinops Group, SixSq will benefit from an established organisation, with shared lead and opportunities, but also has its own roadmap and objectives.</p>
+<p>Now part of the Ekinops Group, SixSq benefits from an established organisation, with shared leads and opportunities, yet also has its own roadmap and objectives.</p>
 
-<p>SixSq is an equal opportunity employer. We will give all qualified applicants a consideration for employment without regard to age, colour, gender identity or expression, marital status, medical condition, national origin, physical or mental disability, religion, sex (including pregnancy).</p>
+<p>SixSq is an equal opportunity employer. We celebrate diversity and are committed to creating an inclusive environment for all employees. We will give all qualified applicants a consideration for employment without regard to age, colour, gender identity or expression, marital status, medical condition, national origin, physical or mental disability, religion, sex (including pregnancy).</p>
