--- a/_includes/jobs-item-banner.html
+++ b/_includes/jobs-item-banner.html
@@ -4,7 +4,7 @@
 				<div class="row">
 					<div class="banner-content col-md-12">
 						<h2 class="text-white text-center mb-30">Join Our Amazing Team and help deliver the Edge-to-Cloud Computing Revolution</h2>
-						<p class="text-white text-center">Our people is our most precious asset. Do you have what it takes to be part of the adventure?</p>
+						<p class="text-white text-center">Our people are our most precious asset. Do you have what it takes to be part of the adventure?</p>
 					</div>
 				</div>
 				<div class="clearfix"></div>
