--- a/_includes/secondary-footer.html
+++ b/_includes/secondary-footer.html
@@ -3,7 +3,7 @@
 		<div class="container">
 			<div class="row footer-content">
 					<div class="col-md-4">
-							<p class="copyright copy-left-text text-white">Copyright © 2021 SixSq SA. All rights reserved. SixSq, Nuvla, NuvlaBox are registered trademarks of SixSq SA in Switzerland and other countries.</p>
+							<p class="copyright copy-left-text text-white">Copyright © {{ 'now' | date: "%Y" }} SixSq SA. All rights reserved. SixSq, Nuvla, NuvlaBox are registered trademarks of SixSq SA in Switzerland and other countries.</p>
 							<p class="copyright copy-left-text text-white">Other registered trademarks are owned by their owner.</p>
 							<p class="copyright copy-left-text text-white">SixSq is an&nbsp; <a href="https://ekinops.com">Ekinops Company</a>.</p>
 						</div>
