Update welcome page Remove acquisition announcement Simplify main message Update blogs

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -8,12 +8,10 @@
       	<div class="container banner-content pt-0 pb-20">
   				<div class="row justify-content-center">
   					<div class="col-md-12 section-title text-center">
-          		<h2 class="header mt-0">Home of:</h2>
-              <img class="pt-20 pb-30" style="width: 30%" src="/img/content/nuvla/nuvla.io_logo_red_on_transparent_512px.png"/>
-  					</div>
-  					<div class="col-md-12 section-title text-center">
           		<h2 class="header mb-20">{{ page.header }}</h2>
-          		<h2 class="subheader">{{ page.subheader }}, <span style="text-decoration: underline;">plus advanced security</span></h2>
+          		<h2 class="subheader">{{ page.subheader }}
+                <!-- <span style="text-decoration: underline;">with advanced security</span> -->
+              </h2>
   					</div>
     			<div class="container">
     				<div class="row justify-content-center pt-20">
@@ -52,20 +50,20 @@
           </div>
         </div>
       </section> -->
-      <section id="announcement" class="pt-50 pb-50 section-is-it-for bg-blue-e0">
+      <!-- <section id="announcement" class="pt-50 pb-50 section-is-it-for bg-blue-e0">
         <div class="container text-center pt-20 pb-20 highlight-image">
           <img class="bg-white" src="/img/content/announcement-background.png">
-  				<div class="section-title text-center pt-40">
-          	<a class="btn-sixsq all text-center" href="/news/2021-11-02-news-ekinops-acquisition/">Read press release</a>
-        	</div>
+          <div class="section-title text-center pt-40">
+            <a class="btn-sixsq all text-center" href="/news/2021-11-02-news-ekinops-acquisition/">Read press release</a>
+          </div>
         </div>
-      </section>
+      </section> -->
   		<div class="section-services section-full">
   			<div class="container">
   				<div class="row justify-content-center">
   						<div class="col-md-12 section-title text-center mb-0">
   							<h2 class="pb-10 fw700">SixSq in action.</h2>
-  							<p class="sub-title fw500">We are a software company, producing secure, scalable and distributed products. Most of our technical software is open source.</p>
+  							<p class="sub-title fw500">We are a software company focused on edge and cloud technologies and services. Our edge software is open source.</p>
   							<p class="sub-title fw500">Discover how SixSq helps customers take advantage of the edge.</p>
   						</div>
   				</div>
