add Calendly integration for booking free demo session

--- a/_includes/header-inner.html
+++ b/_includes/header-inner.html
@@ -66,6 +66,9 @@
               <li class="nav-item">
                 <a class="nav-link link" href="https://nuvla.io/ui/sign-up" id="navbarDropdownMenuLink-sign-up" aria-haspopup="true" aria-expanded="false">Free Trial</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link link" href="" onclick="Calendly.initPopupWidget({url: '{{ site.calendly-href }}'});return false;">Free Demo</a></p>
+              </li>
             </ul>
           </div>
         </nav>
