--- a/_includes/whats-next.html
+++ b/_includes/whats-next.html
@@ -2,10 +2,13 @@
 		<section class="section-contact">
 			<div class="row image-contact-us animated">
 				<div class="container">
-					<div class="content-text text-center text-white pb-50 pt-80">
+					<div class="content-text text-center text-white pb-40 pt-60">
 						<h2 class="text-white fw700">What’s next?</h2>
-						<h3 class="text-white fw600">Start your own journey on <a href="/products-and-services/nuvla-io/overview">Nuvla.io</a></h3>
+						<h3 class="text-white fw600">Start your own journey to the edge with <a href="/products-and-services/nuvla-io/overview">Nuvla.io</a></h3>
 						<p><a class="btn-sixsq all text-center text-white mt-30" href="https://nuvla.io/ui/sign-up">Start your free trial</a></p>
+            <!-- Calendly link widget begin -->
+						<p><a class="btn-sixsq all text-center text-white mt-30" href="" onclick="Calendly.initPopupWidget({url: '{{ site.calendly-href }}'});return false;">Request free demo</a></p>
+            <!-- Calendly link widget end -->
 					</div>
 				</div>
 			</div>
