--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -52,14 +52,18 @@
           </div>
         </div>
       </section> -->
-      <!-- <section id="announcement" class="pt-50 pb-50 section-is-it-for bg-blue-e0">
+      <section id="announcement" class="pt-50 pb-50 section-is-it-for bg-blue-e0">
         <div class="container text-center pt-20 pb-20 highlight-image">
-          <img class="bg-white" src="/img/content/announcement-background.png">
+          <img class="bg-white" src="/img/content/annoucement-the-edge-event.png" style="padding: 0; max-width: 728px">
           <div class="section-title text-center pt-40">
-            <a class="btn-sixsq all text-center" href="/news/2021-11-02-news-ekinops-acquisition/">Read press release</a>
+            <!-- Calendly link widget begin -->
+            <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+            <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript" async></script>
+            <a class="btn-sixsq all text-center" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/the-edge-event/15min'});return false;">Schedule a meeting</a>
+            <!-- Calendly link widget end -->
           </div>
         </div>
-      </section> -->
+      </section>
   		<div class="section-services section-full">
   			<div class="container">
   				<div class="row justify-content-center">
