fix linkedin share

--- a/_includes/social-media-share.html
+++ b/_includes/social-media-share.html
@@ -11,7 +11,7 @@
                 <li>
                   <!-- LinkedIn -->
                   <script src="//platform.linkedin.com/in.js" type="text/javascript"> lang: en_US</script>
-                  <script type="IN/Share" data-url={{ page.url | prepend:site.url }}" data-counter="right"></script>
+                  <script type="IN/Share" data-url="{{ page.url | prepend:site.url }}" data-counter="right"></script>
                 </li>
               </ul>
             </div>
